@@ -2,13 +2,13 @@
 <!DOCTYPE install SYSTEM "http://dev.joomla.org/xml/1.5/component-install.dtd">
 <extension type="component" version="1.6.0" method="upgrade">
 	<name>clm_ext</name>
-	<creationDate>30.10.2015</creationDate>
+	<creationDate>01.11.2016</creationDate>
 	<author>CLM Projekt</author>
-	<copyright>(C) Copyright 2009-2015 by CLM Project</copyright>
+	<copyright>(C) Copyright 2009-2016 by CLM Project</copyright>
 	<license>GPL</license>
 	<authorEmail>fishpoke@fishpoke.de</authorEmail>
 	<authorUrl>www.chessleaguemanager.de</authorUrl>
-	<version>3.2.4</version>
+	<version>3.3.0</version>
 	<description>
 		<![CDATA[
 		 <h3>CLM Extern Komponente :</h3>
